Bug 1331894 - Crash in InvalidArrayIndex_CRASH | mozilla::layers::BuildPathFromPolygon - Cull polygons with no area r=jrmuizel

MozReview-Commit-ID: KCkIA68vvgW